---
source: tests/snapshots_test.rs
expression: error
---
error[E210]: Cannot assign string to variable of type byte
  --> type_mismatch.cb64:3:15
  |
3 |     x: byte = "string"
  |               ^^^^^^^^
